--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://dennisg.github.org/dutchaug.org
+production_url : http://github.dennisg.nl/dutchaug.org
 
 site :
    safe : true
