--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,8 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://github.dennisg.nl/dutchaug.org/
+production_url : http://github.dennisg.nl/dutchaug.org
 
-site :
-   safe : true
-	
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
 JB :
